5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1573_1559.log
== TEST (2019-03-25 15:18:47) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:19:02) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper())
                                                                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:19:09) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper())
                                                                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:19:10) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper())
                                                                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:19:10) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper())
                                                                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:19:11) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper())
-- EXECUTION TIME:
0.147001
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper())
                                                                       ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:19:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper())
-- EXECUTION TIME:
0.153038
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper())
                                                                       ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:19:21) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper()
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper()
                                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:19:51) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper)
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper)
                                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:19:54) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper)
-- EXECUTION TIME:
0.204998
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper)
                                                                     ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:20:02) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia..upper)
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia..upper)
                                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:20:18) 
-- CODE:
frase = "ada Lovelace foi a primeira programadora da história."
print("ada Lovelace foi a primeira programadora da historia..upper)
-- ERROR:
File "XXXX", line 2
    print("ada Lovelace foi a primeira programadora da historia..upper)
                                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:20:58) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper())
                                                                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:21:00) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper())
                                                                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:21:01) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper())
                                                                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:21:01) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper())
                                                                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:22:47) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper())
                                                                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:23:00) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:23:03) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- EXECUTION TIME:
0.193401
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:23:35) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:23:56) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(Ada Lovelace foi a primeira programadora da historia.upper() )
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper() )
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:24:00) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:24:01) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- EXECUTION TIME:
0.178389
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:24:54) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:24:57) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- EXECUTION TIME:
0.214245
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:25:21) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:25:23) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- EXECUTION TIME:
0.156365
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:25:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:31:00) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTÓRIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:31:05) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(frase.upper())
-- EXECUTION TIME:
0.145717
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1559/main.py", line 2, in <module>
    print(frase.upper())
UnicodeEncodeError: 'ascii' codec can't encode character '\xd3' in position 48: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:31:05) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTÓRIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:31:06) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(frase.upper())
-- EXECUTION TIME:
0.174872
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1559/main.py", line 2, in <module>
    print(frase.upper())
UnicodeEncodeError: 'ascii' codec can't encode character '\xd3' in position 48: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:31:37) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTÓRIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:31:56) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTÓRIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:31:58) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTÓRIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:31:58) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTÓRIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:32:34) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:32:38) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.156203
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
